feat: map relationships between usnic banks

--- a/datasource/local/usnic/playground.ipynb
+++ b/datasource/local/usnic/playground.ipynb
@@ -11,26 +11,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h1/0858kwcj3q9dmgv6nwdz9m540000gp/T/ipykernel_42183/1033806369.py:1: DtypeWarning: Columns (36,46,48,64) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  active = pd.read_csv('/Users/albert/code/bankgreen-django/datasource/local/usnic/CSV_ATTRIBUTES_ACTIVE.CSV')\n"
+      "/var/folders/h1/0858kwcj3q9dmgv6nwdz9m540000gp/T/ipykernel_42183/65486929.py:1: DtypeWarning: Columns (36,46,48,64) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  active = pd.read_csv('/Users/albert/code/bankgreen-django/datasource/local/usnic/CSV_ATTRIBUTES_ACTIVE.CSV')[0:100]\n"
      ]
     }
    ],
    "source": [
-    "active = pd.read_csv('/Users/albert/code/bankgreen-django/datasource/local/usnic/CSV_ATTRIBUTES_ACTIVE.CSV')\n",
+    "active = pd.read_csv('/Users/albert/code/bankgreen-django/datasource/local/usnic/CSV_ATTRIBUTES_ACTIVE.CSV')[0:100]\n",
+    "active.to_csv('/Users/albert/code/bankgreen-django/datasource/local/usnic/CSV_ATTRIBUTES_ACTIVE_ABRIDGED.CSV')\n",
     "rssds = [x for x in active[\"#ID_RSSD\"].unique()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rssds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,12 +481,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "# rssds\n",
-    "rels_abridged = rels[rels[\"ID_RSSD_OFFSPRING\"].isin(rssds)]"
+    "active_abridged  = pd.read_csv('/Users/albert/code/bankgreen-django/datasource/local/usnic/CSV_ATTRIBUTES_ACTIVE_ABRIDGED.CSV')\n",
+    "rssds_abridged = [x for x in active[\"#ID_RSSD\"].unique()]\n",
+    "rels_abridged = rels[rels[\"ID_RSSD_OFFSPRING\"].isin(rssds_abridged)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rssds_abridged)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 22)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rels_abridged.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rels_abridged.to_csv('/Users/albert/code/bankgreen-django/datasource/local/usnic/CSV_RELATIONSHIPS_ABRIDGED.CSV')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# delete"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abridged = pd.read_csv('/Users/albert/code/bankgreen-django/datasource/local/usnic/CSV_ATTRIBUTES_ACTIVE_ABRIDGED.CSV')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rssds = abridged[\"#ID_RSSD\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.options.display.max_columns = 100\n",
+    "rels_abridged = rels[rels[\"ID_RSSD_OFFSPRING\"].isin(rssds)]\n",
+    "rels_abridged.to_csv('/Users/albert/code/bankgreen-django/datasource/local/usnic/CSV_RELATIONSHIPS_ABRIDGED.CSV')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(rssds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1155,   505,   505, 42457, 14650, 14650, 14650, 14650,  1454,\n",
+       "       14753, 14753, 14753, 14753, 72258, 72258, 72258, 72258,  1155,\n",
+       "        1856, 42420, 29636, 29636, 29636, 29636, 31255, 31255, 42448,\n",
+       "       58757, 30650, 30650, 30650, 30650, 30650, 30650, 30650, 30650,\n",
+       "       16551, 16551, 57451, 57451, 57451,   457,   457,   457, 43052,\n",
+       "       43052, 43052, 58355, 58355, 28732, 28732, 43959, 43959, 58225,\n",
+       "       56548,  2161,  2161, 31134, 30052, 30810, 30810, 58243, 58243,\n",
+       "       58243, 58243,  1155,  1155,  1155, 58243, 71457, 56717, 30810,\n",
+       "       58551, 58757, 58757,  1669,  1669, 58636, 30052, 30502, 14865,\n",
+       "       30052,  2161, 31255, 43351, 43959,   242,   279, 43351, 43351,\n",
+       "       43351, 71073, 71073, 30810, 71859, 70638, 58355, 30650, 43351,\n",
+       "         279])"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rels_abridged[\"ID_RSSD_OFFSPRING\"].values"
    ]
   },
   {
@@ -480,9 +645,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "rels_abridged.to_csv()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
