formatted ipynb files

--- a/scripts/prismic-migration/verifying.ipynb
+++ b/scripts/prismic-migration/verifying.ipynb
@@ -15,13 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "with open('prismic.json', encoding='utf-8', errors='ignore') as f:\n",
+    "with open(\"prismic.json\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
     "    prismic = json.load(f)\n",
-    "    \n",
-    "with open('prismic2.json', encoding='utf-8', errors='ignore') as f:\n",
-    "    prismic2 = json.load(f)\n"
+    "\n",
+    "with open(\"prismic2.json\", encoding=\"utf-8\", errors=\"ignore\") as f:\n",
+    "    prismic2 = json.load(f)"
    ]
   },
   {
@@ -42,7 +40,7 @@
    ],
    "source": [
     "# prismic['data']\n",
-    "len(prismic['data']['allSfipages']['edges'])"
+    "len(prismic[\"data\"][\"allSfipages\"][\"edges\"])"
    ]
   },
   {
@@ -62,7 +60,7 @@
     }
    ],
    "source": [
-    "len(prismic2['data']['allSfipages']['edges'])"
+    "len(prismic2[\"data\"][\"allSfipages\"][\"edges\"])"
    ]
   },
   {
@@ -71,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = prismic['data']['allSfipages']['edges'] + prismic2['data']['allSfipages']['edges']"
+    "data = prismic[\"data\"][\"allSfipages\"][\"edges\"] + prismic2[\"data\"][\"allSfipages\"][\"edges\"]"
    ]
   },
   {
@@ -112,7 +110,7 @@
     }
    ],
    "source": [
-    "cleaner = {x['node']['_meta']['uid']: {'prismic': x['node']['our_take'][0]['text'] for x in data}}"
+    "cleaner = {x[\"node\"][\"_meta\"][\"uid\"]: {\"prismic\": x[\"node\"][\"our_take\"][0][\"text\"] for x in data}}"
    ]
   },
   {
@@ -123,17 +121,19 @@
    "source": [
     "import re\n",
     "\n",
+    "\n",
     "def remove_non_alphanumeric(string):\n",
-    "    pattern = r'[^a-zA-Z0-9\\s]'\n",
-    "    cleaned_string = re.sub(pattern, '', string).strip()\n",
+    "    pattern = r\"[^a-zA-Z0-9\\s]\"\n",
+    "    cleaned_string = re.sub(pattern, \"\", string).strip()\n",
     "    return cleaned_string\n",
+    "\n",
     "\n",
     "cleaner = {}\n",
     "for d in data:\n",
-    "    key = d['node']['_meta']['uid']\n",
-    "    value =  {'prismic': remove_non_alphanumeric(d['node']['our_take'][0]['text'])}\n",
+    "    key = d[\"node\"][\"_meta\"][\"uid\"]\n",
+    "    value = {\"prismic\": remove_non_alphanumeric(d[\"node\"][\"our_take\"][0][\"text\"])}\n",
     "\n",
-    "    cleaner[key]= value"
+    "    cleaner[key] = value"
    ]
   },
   {
@@ -166,16 +166,16 @@
    "source": [
     "import csv\n",
     "\n",
-    "with open('SFIs.csv', 'r') as csvfile:\n",
+    "with open(\"SFIs.csv\", \"r\") as csvfile:\n",
     "    reader = csv.reader(csvfile)\n",
     "    for row in reader:\n",
-    "        if row != ['brand_tag', 'our_take']:\n",
+    "        if row != [\"brand_tag\", \"our_take\"]:\n",
     "            try:\n",
-    "                cleaner[row[0]]['django'] = remove_non_alphanumeric(row[1])\n",
+    "                cleaner[row[0]][\"django\"] = remove_non_alphanumeric(row[1])\n",
     "            except Exception as e:\n",
     "                print(e)\n",
     "                print(row)\n",
-    "                print('----')"
+    "                print(\"----\")"
    ]
   },
   {
@@ -204,7 +204,7 @@
    ],
    "source": [
     "for k, v in cleaner.items():\n",
-    "    if v.get('prismic') != v.get('django'):\n",
+    "    if v.get(\"prismic\") != v.get(\"django\"):\n",
     "        print(k)"
    ]
   },
